2002-03-16  Richard Williamson  <rjw@apple.com>

        Fixed error handling.  Fixed most frame loading problems.
        Cleaned up frame state machine.
        Moved IFMainURLHandleClient from WebCore.
        
	* Misc.subproj/IFError.m: (-[IFError description]):
	* WebKit.pbproj/project.pbxproj:
	* WebView.subproj/IFBaseWebController.mm: (-[IFBaseWebController
	receivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	receivedError:forResource:partialProgress:fromDataSource:]),
	(-[IFBaseWebController locationChangeDone:forFrame:]):
	* WebView.subproj/IFBaseWebControllerPrivate.h:
	* WebView.subproj/IFBaseWebControllerPrivate.mm: (-[IFBaseWebController
	_receivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	_mainReceivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	_receivedError:forResource:partialProgress:fromDataSource:]),
	(-[IFBaseWebController
	_mainReceivedError:forResource:partialProgress:fromDataSource:]):
	* WebView.subproj/IFWebDataSource.mm: (-[IFWebDataSource startLoading:]),
	(-[IFWebDataSource isLoading]):
	* WebView.subproj/IFWebDataSourcePrivate.h:
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSourcePrivate init]),
	(-[IFWebDataSourcePrivate dealloc]), (-[IFWebDataSource
	_setPrimaryLoadComplete:]), (-[IFWebDataSource _startLoading:]),
	(-[IFWebDataSource _stopLoading]):
	* WebView.subproj/IFWebFrame.h:
	* WebView.subproj/IFWebFrame.mm: (-[IFWebFrame setProvisionalDataSource:]),
	(-[IFWebFrame startLoading]), (-[IFWebFrame reload:]), (-[IFWebFrame errors]),
	(-[IFWebFrame mainDocumentError]):
	* WebView.subproj/IFWebFramePrivate.h:
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFramePrivate dealloc]),
	(-[IFWebFrame _transitionProvisionalToCommitted]), (-[IFWebFrame _setState:]),
	(-[IFWebFrame _addError:forResource:]), (-[IFWebFrame _isLoadComplete]),
	(+[IFWebFrame _recursiveCheckCompleteFromFrame:]), (-[IFWebFrame